lit review, placeholder abstract

--- a/03_background/literature_review.tex
+++ b/03_background/literature_review.tex
@@ -21,9 +21,9 @@
 
 The subject of this thesis is the design, development \& evaluation of platforms that allow their users to observe \& move around their real environment whilst also being able to view an alternative virtual environment from the equivalent vantage point. This combination of `parallel' real \& virtual environments, combined with maintained mobility, is not well encapsulated by any previously defined alternate reality terminology, thus it is necessary to explore this alternate reality terminology \& technologies in order to correctly frame these systems in relation to them.
 
-The closest existing label is the \textit{cross reality} paradigm, as a cross reality system holds the distinction of two discrete environments, one real \& one virtual, complete-unto-themselves, however cross reality further focusses on a bidirectional exchange of information between the environments \& not upon user mobility \& tandem visual exploration of both environments.
+The closest existing label is the cross reality paradigm, as a cross reality system holds the distinction of two discrete environments, one real \& one virtual, complete-unto-themselves, however cross reality further focusses on a bidirectional exchange of information between the environments \& not upon user mobility \& tandem visual exploration of both environments.
 
-Thus, we propose the new term \textit{parallel reality} to refer to systems that combine complete \& discrete real \& virtual environments together in a manner that allows mobile exploration of them both in tandem, relating it \& positioning it against existing alternate reality terminology previously explored by computer science \& other disciplines.
+Thus, we propose the new term parallel reality to refer to systems that combine complete \& discrete real \& virtual environments together in a manner that allows mobile exploration of them both in tandem, relating it \& positioning it against existing alternate reality terminology previously explored by computer science \& other disciplines.
 
 %This research centres around the design, development \& evaluation of a hardware \& software platform which allows its user to observe \& move around their Real World (RW) environment whilst wearing a wide field of view (FOV), stereoscopic 3D, Head Mounted Display (HMD) which allows them to alternatively view an immersive Virtual Reality (VR) environment from the equivalent vantage point. This is achieved by combining a head-tracked HMD, webcams, an indoor positioning system (IPS) \& a 3D game engine, into a mobile \textit{cross reality} (XR) interface.
 
@@ -36,17 +36,17 @@ Thus, we propose the new term \textit{parallel reality} to refer to systems that
 
 \section{Defining Alternate Realities}
 
-Alternate realities (any situation in which the environmental stimuli received by a subject have been somehow modified or mediated) have received substantial attention in recent decades, the themes explored for purposes as diverse as education~\cite{Warburton2009} \& new forms of data visualisation~\cite{Coleman2009} to medical~\cite{TenEyck2011} \& military training~\cite{Qiu2009}. Although terms such as \textit{mixed reality} \& \textit{augmented reality} are now relatively common in conversation \& literature, definitions of such terms have often been used in vague \& even conflicting manners.
+Alternate realities (any situation in which the environmental stimuli received by a subject have been somehow modified or mediated) have received substantial attention in recent decades, the themes explored for purposes as diverse as education~\cite{Warburton2009} \& new forms of data visualisation~\cite{Coleman2009} to medical~\cite{TenEyck2011} \& military training~\cite{Qiu2009}. Although terms such as mixed reality \& augmented reality are now relatively common in conversation \& literature, definitions of such terms have often been used in vague \& even conflicting manners.
 
-This chapter will investigate popular definitions, classifications \& comparisons of alternate realities, combining \& modifying these parameters to produce a canonical set of definitions for the remainder of this thesis, explaining `parallel reality' into these definitions \& models.
+This chapter investigates popular definitions, classifications \& comparisons of alternate realities, combining \& modifying these parameters to produce a canonical set of definitions for the remainder of this thesis, allowing `parallel reality' to be introduced into a sound framework of classification.
 
 \subsection{Milgram \& Kishino's Reality-Virtuality Continuum}
 \label{milgram&kishino}
-Paul Milgram, Herman Colquhon and Fumio Kishino addressed the issue of alternate reality definitions in detail and can be accredited with introducing the terms \textit{augmented virtuality} and \textit{mixed reality} to the literature, prompted by their identification of the need for more encompassing terms to supplement the existing definitions of \textit{augmented reality}~\cite{Milgram1994, Milgram1999}.
+Paul Milgram, Herman Colquhon and Fumio Kishino addressed the issue of alternate reality definitions in detail and can be accredited with introducing the terms augmented virtuality and mixed reality to the literature, prompted by their identification of the need for more encompassing terms to supplement the existing definitions of augmented reality~\cite{Milgram1994, Milgram1999}.
 
 %However despite these thorough and well-reasoned definitions being published originally in 1994, much of the subsequent literature studied for this review has adopted conflicting, or at least confusing and misleading, definitions.
 
-One of the overbearing concepts introduced by Milgram et al. is that whilst both purely real and purely virtual environments do exist they should not be considered discrete alternatives but rather poles lying at opposite ends of a linear scale that stretches from an entirely real environment at one extreme to an ontologically parallel but entirely virtual environment~\cite{Qvortrup2002} at the other $-$ the \textit{Reality-Virtuality continuum}. The location of an environment along this continuum coincides with its location along a parallel \textit{Extent of World Knowledge continuum} where `world knowledge' refers to the amount of quantitative information that is associated with the content being presented, or in other words how much of the environment is being `modelled' by a computer. These continua are included as figure \ref{reality_virtuality_extent_of_world_knowledge_continuum}.
+One of the overbearing concepts introduced by Milgram et al. is that whilst both purely real and purely virtual environments do exist they should not be considered discrete alternatives but rather poles lying at opposite ends of a linear scale that stretches from an entirely real environment at one extreme to an ontologically parallel but entirely virtual environment~\cite{Qvortrup2002} at the other $-$ the Reality-Virtuality continuum (figure \ref{reality_virtuality_extent_of_world_knowledge_continuum}, top). The location of an environment along this continuum coincides with its location along a parallel Extent of World Knowledge continuum (figure \ref{reality_virtuality_extent_of_world_knowledge_continuum}, bottom) where `world knowledge' refers to the amount of quantitative information that is associated with the content being presented, or in other words how much of the environment is being `modelled' by a computer.
 
 \begin{figure}[h]
 \centering
@@ -57,9 +57,9 @@ One of the overbearing concepts introduced by Milgram et al. is that whilst both
 
 With a purely virtual environment, the entire viewport must necessarily be computer modelled in order to be rendered and as such there is complete quantitative information about all objects and between all objects being presented. At the opposite end of the spectrum with a completely real environment where none of the viewport is computer modelled there is no quantitative information associated with the content being displayed. At any point between the extremes the environment consists of a mixture of some modelled and some non-modelled content; with the computer associating quantitative information to, and between, the virtual objects, but not to the real objects or between the virtual and real objects.
 
-Carrying the continuum concept further, Milgram et al. illustrate their understanding of the existing term \textit{augmented reality} and also introduce two related new terms; \textit{augmented virtuality} and \textit{mixed reality}. In this fashion, \textit{mixed reality} is used to describe any environment that is not completely real or completely virtual; that is, it encompasses all positions on the continuum between the extremes. \textit{Augmented reality} is used to describe a real environment upon which virtual objects are overlain and \textit{augmented virtuality} is used to describe a virtual environment upon which objects sampled from the real world (such as video feeds) are overlain. It is also shown here that \textit{mixed reality} encompasses both \textit{augmented reality} and \textit{augmented virtuality}.
+Carrying the continuum concept further, Milgram et al. illustrate their understanding of augmented reality and also introduce two related new terms; augmented virtuality and mixed reality. In this fashion, mixed reality is used to describe any environment that is not completely real or completely virtual; that is, it encompasses all positions on the continuum between the extremes. Augmented reality is used to describe a real environment upon which virtual objects are overlain and augmented virtuality is used to describe a virtual environment upon which objects sampled from the real world (such as video feeds) are overlain. It is also shown here that mixed reality encompasses both augmented reality and augmented virtuality.
 
-One obvious question raised from studying this figure is at what point toward the centre of the continuum an environment changes from being \textit{augmented reality} into \textit{augmented virtuality} or vice-versa. The answer lies with consideration of the quantitative knowledge associated with the objects that comprise the viewport.
+One obvious question raised from studying this figure is at what point toward the centre of the continuum an environment changes from being augmented reality into augmented virtuality or vice-versa. The answer lies with consideration of the quantitative knowledge associated with the objects that comprise the viewport.
 
 For example, if one were to take a viewport depicting a purely real environment and then incrementally add more and more virtual objects, the environment's classification would progress rightward along the continuum. Eventually the entire viewport would be obscured by virtual objects and the obvious conclusion would be to classify the environment as being purely virtual. However this would only be true if there was complete quantitative information associated with, and between, all of the virtual objects within the real 3D space of the viewport, which is unlikely to be the case.
 
@@ -71,7 +71,7 @@ Thus, Milgram et al. conclude, it is not necessarily true that an environment is
 
 \subsection{Roy Want's Virtuality Matrix}
 
-Another method of illustrating the relationships between different categories of alternate realities was put forward by Roy Want in his introductory article for a 2009 issue of IEEE Pervasive Computing dedicated to the \textit{cross reality} paradigm~\cite{Want2009}. He presents a 2x2 matrix categorising the different terms according to whether the experience and overlay data are real or virtual (figure \ref{original_virtuality_matrix.png}). Whilst this is a useful representation, some of the definitions \& criteria depicted do not match with those of Milgram et al. or even with those of other authors in the same issue of Pervasive, let alone other publications concerning alternate realities. Figure \ref{modified_virtuality_matrix.png} presents a modified version of this matrix that is in keeping with the framework laid out by Milgram et al. \& the wider literature.
+Another method of illustrating the relationships between different categories of alternate realities was put forward by Roy Want in his introductory article for a 2009 issue of IEEE Pervasive Computing dedicated to the cross reality paradigm~\cite{Want2009}. He presents a 2x2 matrix categorising the different terms according to whether the experience and overlay data are real or virtual (figure \ref{original_virtuality_matrix.png}). Whilst this is a useful representation, some of the definitions \& criteria depicted do not match with those of Milgram et al. or even with those of other authors in the same issue of Pervasive, let alone other publications concerning alternate realities. Figure \ref{modified_virtuality_matrix.png} presents a modified version of this matrix that is in keeping with the framework laid out by Milgram et al. \& the wider literature.
 
 \begin{figure}[h]
 \centering
@@ -89,19 +89,21 @@ Another method of illustrating the relationships between different categories of
 \end{minipage}
 \end{figure}
 
-Where the original matrix positions \textit{cross reality} in the upper left quadrant, at the congruence of `experience virtual' and `overlay data real', the modified matrix positions \textit{augmented virtuality}. Referencing Milgram's continuum, `experience virtual' relates to a position somewhere within the right half, while `overlay data real' relates to presentation over this necessarily virtual environment of sampled real world data, resulting in a partially modelled environment, leaving us in the area of the continuum occupied by \textit{augmented virtuality}.
+Where the original matrix positions cross reality in the upper left quadrant, at the congruence of `experience virtual' and `overlay data real', the modified matrix positions augmented virtuality. Referencing Milgram's continuum, `experience virtual' relates to a position somewhere within the right half, while `overlay data real' relates to presentation over this necessarily virtual environment of sampled real world data, resulting in a partially modelled environment, leaving us in the area of the continuum occupied by augmented virtuality.
 
-The original matrix also features the term \textit{embodied virtuality} in the upper right quadrant, at the congruence of `experience real world' and `overlay data real'. Want explains that this is an alternative term for \textit{ubiquitous computing} which is \textit{``essentially the opposite of VR''}. The modified matrix adopts the position that the opposite of \textit{virtual reality} is simply \textit{reality} and that \textit{ubiquitous computing} does not constitute an alternate reality but rather a different model of human-computer interaction (that can be implemented in either \textit{reality} or \textit{augmented reality}, depending upon how the computing infrastructure presents information to users). A \textit{ubiquitous computing} system is necessarily a real environment, as it is by definition the integration and dissemination of computational infrastructure into our real surrounds~\cite{York2004}. However whether this real environment is augmented by virtual objects is not restricted by the concept.
+The original matrix also features the term embodied virtuality in the upper right quadrant, at the congruence of `experience real world' and `overlay data real'. Want explains that this is an alternative term for \textit{ubiquitous computing} which is \textit{``essentially the opposite of VR''}. The modified matrix adopts the position that the opposite of virtual reality is simply reality and that ubiquitous computing does not constitute an alternate reality but rather a different model of human-computer interaction (that can be implemented in either reality or augmented reality, depending upon how the computing infrastructure presents information to users). A ubiquitous computing system is necessarily a real environment, as it is by definition the integration and dissemination of computational infrastructure into our real surrounds~\cite{York2004}. However whether this real environment is augmented by virtual objects is not restricted by the concept.
 
-Finally the modified matrix removes the central \textit{mixed reality} section from the original matrix, as its position is misleading. As the boundaries formed between the categories by the different colours could be construed as meaning that there are discrete boundaries between the different categories, the reader could be led to believe that a purely \textit{virtual reality} or a purely \textit{embodied virtuality} environment can be considered \textit{mixed reality}, which is incorrect. If one wished to picture the position of \textit{mixed reality} in relation to the modified matrix, it would cover the same area as enclosed by the union of \textit{augmented virtuality} and \textit{augmented reality}.
+Finally the modified matrix removes the central mixed reality section from the original matrix, as its position is misleading. As the boundaries formed between the categories by the different colours could be construed as meaning that there are discrete boundaries between the different categories, the reader could be led to believe that a purely virtual reality environment can be considered mixed reality, which is incorrect. If one wished to picture the position of mixed reality in relation to the modified matrix, it would cover the same area as enclosed by the union of augmented virtuality and augmented reality.
 
 %=========================================================================================================
 
 \subsection{Steve Mann's Venn Diagrams}
 \label{stevemannvenn}
-Steve Mann, a veteran of wearable computing \& one of the original MIT `gargoyles' etc. \textbf{***Get reference about Steve Mann's history from Sherry Turkle***} presented a Venn diagram to illustrate the relationships between the different categories of alternate realities when discussing the problems that arise with existing taxonomies when discussing reality-modifying devices in general. Mann clarifies the use of `mediated reality' as \textit{``a general framework for artificial modification of human perception by way of devices for augmenting, deliberately diminishing, and more generally, for otherwise altering sensory input''}~\cite{Mann2002a}. Mediated reality thus encompasses all of mixed reality, but also the group of `modulated reality' which includes devices such as eyeglasses that use lenses/mirrors to invert the wearer's view.
+Steve Mann, the \textit{``father of wearable computing''}~\cite{Schofield2012} \& one of a group of researchers at MIT that became known as `cyborgs' for their body-worn computers, digital displays clipped to spectacle frames \& always-on Internet connections~\cite{Turkle2011}, presented a Venn diagram to illustrate the relationships between the different categories of alternate realities when discussing the problems that arise with existing taxonomies when discussing reality-modifying devices in general. Mann clarifies the use of mediated reality as \textit{``a general framework for artificial modification of human perception by way of devices for augmenting, deliberately diminishing, and more generally, for otherwise altering sensory input''}~\cite{Mann2002a}. Mediated reality thus encompasses all of mixed reality, but also the group of modulated reality which includes devices such as eyeglasses that use lenses/mirrors to invert the wearer's view, but do not apply computer mediation.
 
-Mann's Venn diagram (figure \ref{Mann_venn_original.png}) places augmented reality at a subset of mixed reality, but then further places virtual reality at a subset of augmented reality \& in turn mixed reality. A modified version of this diagram (figure \ref{Mann_venn_mod_1.png}) removes virtual reality from this position, as although virtual reality is by definition mediated, it is not necessarily always presented as part of an augmented or mixed reality, as purely virtual environments can \& do exist $-$ Mann himself states that \textit{``mixed reality exists in many forms along a continuum from augmented reality \ldots\ to more recent efforts at augmented virtuality''}, which is contrary to the diagram's representation of virtual reality as necessarily a subset of augmented reality \& in turn mixed reality. Furthermore the modified diagram introduces augmented virtuality, mentioned by Mann in his prose but not included in the original diagram. An overlap is also introduced between those modulated reality environments that are also classified as mixed reality, as it is perplexing to think of a mixed reality environment that is neither augmented reality nor augmented virtuality.
+%Alone Together p 151
+
+Mann's Venn diagram (figure \ref{Mann_venn_original.png}) places augmented reality at a subset of mixed reality, but then further places virtual reality at a subset of augmented reality \& in turn mixed reality. A modified version of this diagram (figure \ref{Mann_venn_mod_1.png}) removes virtual reality from this position, as although virtual reality is by definition mediated, it is not necessarily always presented as part of an augmented or mixed reality, as purely virtual environments can \& do exist $-$ Mann himself states that \textit{``mixed reality exists in many forms along a continuum from augmented reality \ldots\ to more recent efforts at augmented virtuality''}, which is contrary to the diagram's representation of virtual reality as necessarily a subset of augmented reality \& in turn of mixed reality. Furthermore the modified diagram introduces augmented virtuality, mentioned by Mann in his prose but not included in the original diagram. An overlap is also introduced between those modulated reality environments that are also classified as mixed reality, as it is perplexing to think of a mixed reality environment that is neither augmented reality nor augmented virtuality (at least when considering a wholly real environment \& a wholly virtual environment as the logically possible extremes).
 
 \begin{figure}[h]
 \centering
@@ -126,16 +128,16 @@ Mann's Venn diagram (figure \ref{Mann_venn_original.png}) places augmented reali
   \label{Mann_venn_mod_3.png}
 \end{figure}
 
-Visualising the position of the `basic' classes of reality \& virtual reality using this same method requires more drastic alteration to the Venn diagram, but is diagnostic in further revealing the relationships between the terms introduced within Want's literature. The further modified Venn diagram (figure \ref{Mann_venn_mod_3.png}) shows;
+Visualising the position of the basic classes of reality \& virtual reality using this same method requires more drastic alteration to the Venn diagram, but is diagnostic in further revealing the relationships between the terms introduced within Mann's literature. The further modified Venn diagram (figure \ref{Mann_venn_mod_3.png}) shows that;
 \begin{itemize}
-	\item mixed reality as the intersection of reality \& virtual reality;
+	\item mixed reality is the intersection of reality \& virtual reality;
 	\item mediated reality can be comprised from purely real or purely virtual content;
-	\item that all virtual reality is necessarily mediated;
-	\item that modulated reality can comprise only mediated real, or both real \& virtual aspects in a mixed reality;
-	\item that augmented reality \& augmented virtuality can feature in modulated reality systems.
+	\item all virtual reality is necessarily mediated;
+	\item modulated reality can comprise only mediated real, or both real \& virtual aspects in a mixed reality;
+	\item augmented reality \& augmented virtuality can feature in modulated reality systems.
 \end{itemize}
 
-This final iteration of the Venn diagram still contains ambiguity, however it is more diagnostic for categorising the majority of alternate reality systems than the previous two diagrams, whilst also avoiding over-complication. There are two ambiguities to recognise. First, this diagram maintains from the original diagram positions in which a system can exist that is both mixed \& modulated, but which is neither augmented reality nor augmented virtuality. Second, this diagram does not accommodate a purely virtual environment that is then modulated: whether such a system would ever be created is arguable though, as any modulation that could be performed by modulators external to the virtual environment software could be better performed by the software itself.
+This final iteration of the Venn diagram still contains ambiguity, however it is more diagnostic for categorising the majority of alternate reality systems than the previous two diagrams, whilst also avoiding over-complication. There are two ambiguities to recognise. First, this diagram maintains from the original diagram positions in which a system can exist that is both mixed \& modulated, but which is neither augmented reality nor augmented virtuality. Second, this diagram does not accommodate a purely virtual environment that is then modulated: whether such a system would ever be created is arguable though, as any modulation that could be performed by modulators external to the virtual environment software could almost certainly be better performed by the software itself.
 
 %=========================================================================================================
 %=========================================================================================================
@@ -219,13 +221,13 @@ While traditional definitions of \textit{virtual reality} require the environmen
 
 \section{Additional Alternate Reality Terms}
 
-In addition to the range of alternate realities covered in the previous section, there are several further alternate reality terms that requiring understanding but which do not feature or fit well into the frameworks presented in sections \ref{milgram&kishino} to \ref{stevemannvenn}.
+In addition to the range of alternate realities covered in the previous section, there are several further less commonly used alternate reality terms that requiring understanding but which do not feature or fit well into the frameworks presented in sections \ref{milgram&kishino} to \ref{stevemannvenn}.
 
 %=========================================================================================================
 
 \subsection{HyperReality}
 
-HyperReality (HR) is the term given to a hypothetical communications infrastructure that allows the seamless commingling of reality \& virtual reality, human intelligence \& artificial intelligence. In terms of the previously explored alternate reality terms, a HR system is most accurately described as facilitating the creation of mixed reality environments that bring virtual reality content into real world locations $-$ ``It seeks to make virtual reality something that is experienced as part of physical reality, so that virtual and real phenomena appear to interact with each other: HR is VR \textit{as well as, not instead of,} PR''~\cite{Terashima2001} (emphasis original).
+HyperReality (HR) is the term given to a hypothetical communications infrastructure that allows the seamless commingling of reality \& virtual reality, human intelligence \& artificial intelligence. In terms of the previously explored alternate reality terms, a HR system is most accurately described as facilitating the creation of mixed reality environments that bring virtual reality content into real world locations $-$ \textit{``It seeks to make virtual reality something that is experienced as part of physical reality, so that virtual and real phenomena appear to interact with each other: HR is VR} as well as, not instead of, \textit{PR''}~\cite{Terashima2001} (emphasis original).
 
 HR is an abstract, high level term that refers to a category of mixed reality environments that combine VR content with views of the real world in a manner that arguably falls under the moniker of augmented reality, however with HR there is an emphasis that the integration of the virtual reality content into the real world be performed seamlessly, such that HR enables hyperreality (this latter non-capitalised term referring to the postmodern usage of the word wherein an observer is unable to distinguish between objects that are real \& objects that are virtual).
 
