--- a/00_abstract/abstract.tex
+++ b/00_abstract/abstract.tex
@@ -1,7 +1,1 @@
-\begin{itemize}
-	\item \textbf{Content -} Short, high-level summary of document.
-	\item \textbf{What has been done -} Nothing.
-	\item \textbf{What is left to do/how long should it take -} Write entire abstract, but should be quick to do \& be done (near) last.
-\end{itemize}
-
-\hrule
+This thesis discusses the design \& implementation of a hardware \& software system that allows its user to observe \& move around their real world environment whilst wearing equipment that allows them to alternatively view an immersive virtual reality environment from the equivalent vantage point. This style of interaction with complete real \& virtual environments is presented as a new category of alternate reality, called parallel reality. The position of parallel reality is established in relation to previously explored alternate realities \& analysis \& discussion of results from preliminary user studies of the system are presented.
