--- a/bib.bib
+++ b/bib.bib
@@ -48,7 +48,7 @@ year = {2012}
 }
 @article{Andersen,
 author = {Andersen, Peter B\o gh},
-file = {:home/cj/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Andersen - Unknown - Tangible Objects Connecting Informational and Physical space.pdf:pdf},
+file = {:array\_z/Downloads/TangObj.pdf:pdf},
 title = {{Tangible Objects : Connecting Informational and Physical space}}
 }
 @article{Appino1992,
@@ -64,15 +64,6 @@ url = {http://www.research.ibm.com/people/k/koved/papers/rc16446.html},
 volume = {1},
 year = {1992}
 }
-@article{Applin2012,
-abstract = {The technology industry has evolved over the years with a development lens increasingly focused on end users and usage cases. Indeed, for the past decade or more, personas (the designer-created profiles of end users) have become stand-ins for various usage cases and user models. With regard to location aware software and mobile applications, the usage of Dual Reality and Mixed Reality as metaphors have functioned in a similar vein. Just as personas are not people, Mixed and Dual Reality do not fully represent or address the complex usage cases developing as more people do more things, with more software at more times and in more spaces than ever before. This new complex application ecosystem presents greater opportunities and challenges for application design. We discuss ways that developers can use PolySocial Reality (PoSR) to represent a more complete complex structural model},
-author = {Applin, Sally A},
-journal = {Policy},
-number = {February},
-title = {{PolySocial Reality : Prospects for Extending User Capabilities Beyond Mixed , Dual and Blended Reality}},
-url = {http://www.dfki.de/LAMDa/2012/accepted/PolySocial\_Reality.pdf},
-year = {2012}
-}
 @article{Applin2011,
 abstract = {Contribute to the workshop with our understanding of humans, culture and group behavior and to learn from others what type of group behavior is expected as new technologies and their subsequent experiences are created for human use. When we discuss human group behavior, we refer to the definition of a social group: a collection of humans who repeatedly interact within a system. Humans can, and do switch context between environments and blend traces of one into the other in a socially unconscious manner often seemingly simultaneously. We propose that the cultures and behaviors of humans are increasingly actively permeating Internet and network- based applications, as well as those that are geolocal. With the future Internet of things, Dual Reality and Mixed Reality, the opportunity for humans to extend their own blended reality, as well as to create new ones is unfolding. That said, because humans interact within groups, the multiplexing of their mutual blended realities rapidly creates a PoSR. Sorting out the relationships between realities as well as between synchronous and asynchronous time and geolocal space can create a condition where realities are simultaneous and the idea of 'x' can be perceived as equaling 'not x.' We explore this new type of interoperability between virtual and physical, ideational and material, representations and objects and culture.},
 author = {Applin, Sally A},
@@ -82,6 +73,15 @@ pages = {11--14},
 title = {{A Cultural Perspective on Mixed , Dual and Blended Reality}},
 url = {http://www.anthropunk.com/xwiki/wiki/anthropunk/download/Main/WebHome/ACulturalPerspectiveApplinFischer.pdf},
 year = {2011}
+}
+@article{Applin2012,
+abstract = {The technology industry has evolved over the years with a development lens increasingly focused on end users and usage cases. Indeed, for the past decade or more, personas (the designer-created profiles of end users) have become stand-ins for various usage cases and user models. With regard to location aware software and mobile applications, the usage of Dual Reality and Mixed Reality as metaphors have functioned in a similar vein. Just as personas are not people, Mixed and Dual Reality do not fully represent or address the complex usage cases developing as more people do more things, with more software at more times and in more spaces than ever before. This new complex application ecosystem presents greater opportunities and challenges for application design. We discuss ways that developers can use PolySocial Reality (PoSR) to represent a more complete complex structural model},
+author = {Applin, Sally A},
+journal = {Policy},
+number = {February},
+title = {{PolySocial Reality : Prospects for Extending User Capabilities Beyond Mixed , Dual and Blended Reality}},
+url = {http://www.dfki.de/LAMDa/2012/accepted/PolySocial\_Reality.pdf},
+year = {2012}
 }
 @article{Applin2011a,
 abstract = {We consider some possible broad changes that may impact society as a whole as a result of widespread integration of full-spectrum deployed pervasive computing technologies. Our approach considers design challenges for successfully developing and integrating pervasive technologies into culture and society. This is particularly challenging, since pervasive technologies as services are most successful when transparent, invisible, overlooked, unacknowledged and seemingly forgotten by the very groups that embrace their usage and development. We suggest a heuristic for understanding pervasive technology from an anthropological/social perspective, along with a reminder that humans create, shape and use the technologies that affect them. In particular, we look at the impact on social relations in a poly-social world where people must develop means to blend their own realities with those of of others. In conclusion, we remind those developing these technologies, that although we will eventually become wedded and intertwined as cyborgs within this new environment, it may have a positive outcome, creating new social group models for human interaction.},
@@ -785,16 +785,16 @@ title = {{Database as tar archive suitable for input into pg\_restore}},
 url = {http://straylight.cs.st-andrews.ac.uk/cj\_davies\_psql\_db\_tar\_for\_pg\_restore},
 urldate = {01/04/2013}
 }
-@misc{Daviesc,
-author = {Davies, C J},
-title = {{Database as plain-text SQL script file}},
-url = {http://straylight.cs.st-andrews.ac.uk/cj\_davies\_psql\_db\_sql\_plaintext},
-urldate = {01/04/2013}
-}
 @misc{Daviesa,
 author = {Davies, C J},
 title = {{Pangolin source code}},
 url = {https://bitbucket.org/cj\_davies/viewer-release-serial-io},
+urldate = {01/04/2013}
+}
+@misc{Daviesc,
+author = {Davies, C J},
+title = {{Database as plain-text SQL script file}},
+url = {http://straylight.cs.st-andrews.ac.uk/cj\_davies\_psql\_db\_sql\_plaintext},
 urldate = {01/04/2013}
 }
 @inproceedings{Davies2012,
@@ -1383,6 +1383,16 @@ url = {http://linkinghub.elsevier.com/retrieve/pii/S0921889009001092},
 volume = {57},
 year = {2009}
 }
+@misc{Heeter2003,
+abstract = {I have lived in San Francisco while working as a full-time virtual faculty member for Michigan State University for nearly six years. Unlike most humans, I spend a larger proportion of every day as a virtual person than as a physical person. This article is adapted from a keynote speech I delivered at the Fourth International Workshop on Presence in Philadelphia in May of 2001. I use a personal narrative style to explore issues and to question some of the research community's prevailing assumptions about presence. Lombard and Ditton's (1997) frequently cited conceptualization defines presence as a “perceptual illusion of nonmediation” that occurs “when a person fails to perceive or acknowledge the existence of a medium in his/her communication environment and responds as he/she would if the medium were not there.” The underlying assumption is that, in the absence of technology, everyone experiences continuous presence at a constant intensity throughout their lives. Instead, this article suggests that presence is not a constant of everyday nonmediated experience. Careful consideration of unmediated (real) presence might help the conceptualization and study of mediated presence.},
+author = {Heeter, Carrie},
+booktitle = {Presence: Teleoperators and Virtual Environments},
+number = {4},
+pages = {335--345},
+title = {{Reflections on Real Presence by a Virtual Person}},
+volume = {12},
+year = {2003}
+}
 @article{Heeter1992,
 abstract = {What do you feel when you enter a virtual world? What creates the experience of presence? What factors contribute to making you feel like you are there1 ?},
 author = {Heeter, Carrie},
@@ -1396,16 +1406,6 @@ title = {{Being there: The subjective experience of presence}},
 url = {http://dl.acm.org/citation.cfm?id=196589},
 volume = {1},
 year = {1992}
-}
-@misc{Heeter2003,
-abstract = {I have lived in San Francisco while working as a full-time virtual faculty member for Michigan State University for nearly six years. Unlike most humans, I spend a larger proportion of every day as a virtual person than as a physical person. This article is adapted from a keynote speech I delivered at the Fourth International Workshop on Presence in Philadelphia in May of 2001. I use a personal narrative style to explore issues and to question some of the research community's prevailing assumptions about presence. Lombard and Ditton's (1997) frequently cited conceptualization defines presence as a “perceptual illusion of nonmediation” that occurs “when a person fails to perceive or acknowledge the existence of a medium in his/her communication environment and responds as he/she would if the medium were not there.” The underlying assumption is that, in the absence of technology, everyone experiences continuous presence at a constant intensity throughout their lives. Instead, this article suggests that presence is not a constant of everyday nonmediated experience. Careful consideration of unmediated (real) presence might help the conceptualization and study of mediated presence.},
-author = {Heeter, Carrie},
-booktitle = {Presence: Teleoperators and Virtual Environments},
-number = {4},
-pages = {335--345},
-title = {{Reflections on Real Presence by a Virtual Person}},
-volume = {12},
-year = {2003}
 }
 @article{Held1992,
 author = {Held, Richard and Durlach, Nathaniel},
@@ -1485,19 +1485,6 @@ url = {http://www.htc.com/www/smartphones/htc-one-s/},
 urldate = {28/03/2013},
 year = {2013}
 }
-@misc{Hughes2006,
-author = {Hughes, Ian},
-title = {{Lessons from second life}},
-url = {http://eightbar.co.uk/2006/04/22/lessons-from-second-life/},
-year = {2006}
-}
-@misc{Hughes2006c,
-author = {Hughes, Ian},
-title = {{Wimbledon in Second Life}},
-url = {http://eightbar.co.uk/2006/06/27/wimbledon-in-second-life/},
-urldate = {21/05/2012},
-year = {2006}
-}
 @misc{Hughes2006a,
 author = {Hughes, Ian},
 title = {{Second Life – Outside in}},
@@ -1509,6 +1496,19 @@ year = {2006}
 author = {Hughes, Ian},
 title = {{Well it got my attention – Second Life}},
 url = {http://eightbar.co.uk/2006/04/04/well-it-got-my-attention-second-life/},
+urldate = {21/05/2012},
+year = {2006}
+}
+@misc{Hughes2006,
+author = {Hughes, Ian},
+title = {{Lessons from second life}},
+url = {http://eightbar.co.uk/2006/04/22/lessons-from-second-life/},
+year = {2006}
+}
+@misc{Hughes2006c,
+author = {Hughes, Ian},
+title = {{Wimbledon in Second Life}},
+url = {http://eightbar.co.uk/2006/06/27/wimbledon-in-second-life/},
 urldate = {21/05/2012},
 year = {2006}
 }
@@ -2101,6 +2101,13 @@ url = {http://www.businessweek.com/magazine/content/06\_47/b4010068.htm?chan=tc\
 urldate = {21/05/2012},
 year = {2006}
 }
+@misc{Lifton2009a,
+author = {Lifton, Joshua},
+publisher = {Meta Institute for Computational Astrophysics (MICA)},
+title = {{Trends, Dual Reality, and Identity in Virtual Worlds}},
+url = {http://dspace.mit.edu/openaccess-disseminate/1721.1/61991},
+year = {2009}
+}
 @inproceedings{lifton:adoption,
 annote = {        From Duplicate 1 (                           Consumer Adoption of Cross Reality Systems                         - Lifton, Joshua )
                 
@@ -2163,20 +2170,13 @@ title = {{Dual Reality: An Emerging Medium}},
 type = {Ph.D. Dissertation},
 year = {2007}
 }
-@misc{Lifton2009a,
-author = {Lifton, Joshua},
-publisher = {Meta Institute for Computational Astrophysics (MICA)},
-title = {{Trends, Dual Reality, and Identity in Virtual Worlds}},
-url = {http://dspace.mit.edu/openaccess-disseminate/1721.1/61991},
-year = {2009}
-}
 @inproceedings{Lifton2007b,
 address = {New York, New York, USA},
 annote = {Paper about the Plug sensor/actuator platform developed by the Media Lab for Lifton's research. Published before Lifton's PhD so doesn't contain as much information as the PhD does about Plug \& its uses.},
 author = {Lifton, Joshua and Feldmeier, Mark and Ono, Yasuhiro and Lewis, Cameron and Paradiso, Joseph A.},
 booktitle = {Proceedings of the 6th international conference on Information processing in sensor networks - IPSN '07},
 doi = {10.1145/1236360.1236377},
-file = {:home/cj/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Lifton et al. - 2007 - A platform for ubiquitous sensor deployment in occupational and domestic environments.pdf:pdf},
+file = {:home/cj/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Lifton et al. - 2007 - A Platform for Ubiquitous Sensor Deployment in Occupational and Domestic Environments.pdf:pdf},
 isbn = {978159593638X},
 month = apr,
 pages = {119},
@@ -2408,11 +2408,6 @@ photojournalism and everyday use}},
 volume = {36},
 year = {1998}
 }
-@misc{Mann1994,
-author = {Mann, Steve},
-title = {{'Mediated Reality'}},
-year = {1994}
-}
 @misc{Mann2002a,
 abstract = {Mixed Reality exists in many forms along a continuum from Augmented Reality (reality enhanced by graphics, such as Sutherland's work from more than 30 years ago) to more recent efforts at Augmented Virtuality (graphics enhanced by reality, graphics enhanced by video, etc.). Mixed Reality provides numerous ways to add together (mix) various proportions of real and virtual worlds. However, Mediated Reality is an even older tradition, introduced by Stratton more than 100 years ago. Stratton presented two important ideas:  1. the idea of constructing special eyeglasses to modify how he saw the world; and  2. the ecologically motivated approach to conducting his experiments within the domain of his own everyday personal life.  Stratton's seminal work has inspired a wide variety of devices that can be used to augment, deliberately diminish, or otherwise alter human visual perception. The first half of this paper presents some of the problems with the existing taxonomies (e.g. mixed reality) and distinctions (e.g. optical versus video see-through), that arise when we consider reality-modifying devices. The second half of the paper presents various new designs for reality-modifying devices, especially those used to modify only a portion of the visual reality stream, suitable for use in everyday life. These devices have the appearance of ordinary bifocal eyeglasses and reading glasses. Finally, a new kind of reality mediator that uses the eyeglass frames themselves as the mediating element is presented. This design makes it impossible for those other than the wearer, even upon very close inspection, to determine whether or not the eyeglasses contain a reality mediator. Such designs make possible livelong experiments and mediated reality experiences in personal everyday life, without the social stigma associated with obvious reality--modifying devices.  },
 author = {Mann, Steve},
@@ -2421,6 +2416,11 @@ keywords = {HCI,Mediated Reality,UX},
 title = {{Mediated Reality with implementations for everyday life}},
 url = {http://www.mitpressjournals.org/toc/pres/11/4},
 year = {2002}
+}
+@misc{Mann1994,
+author = {Mann, Steve},
+title = {{'Mediated Reality'}},
+year = {1994}
 }
 @misc{Mann2002,
 abstract = {Diminished reality is as important as augmented reality, and both are possible with a device called the Reality Mediator . Over the past two decades, we have designed, built, worn, and tested many different embodiments of this device in the context of wearable computing, Incorporated into the Reality Mediator is an "EyeTap" system, which is a device that quantifies and resynthesizes light that would otherwise pass through one or both lenses of the eye(s) of a wearer. The functional principles of EyeTap devices are discussed, in detail. The EyeTap diverts into a spatial measurement system at least a portion of light that would otherwise pass through the center of projection of at least one lens of an eye of a wearer. The Reality Mediator has at least one mode of operation in which it reconstructs these rays of light, under the control of a wearable computer system. The computer system then uses new results in algebraic projective geometry and comparametric equations to perform head tracking, as well as to track motion of rigid planar patches present in the scene. We describe how our tracking algorithm allows an EyeTap to alter the light from a particular portion of the scene to give rise to a computer-controlled, selectively mediated reality. An important difference between mediated reality and augmented reality includes the ability to not just augment but also deliberately diminish or otherwise alter the visual perception of reality. For example, diminished reality allows additional information to be inserted without causing the user to experience information overload. Our tracking algorithm also takes into account the effects of automatic gain control, by performing motion estimation in both spatial as well as tonal motion coordinates.},
@@ -2645,6 +2645,11 @@ title = {{The Second Life of a Sensor: Integrating Real-world Experience in Virt
 url = {http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.147.1457},
 year = {2008}
 }
+@misc{mit:doppel,
+author = {MIT},
+howpublished = {$\backslash$url\{http://www.media.mit.edu/resenv/doppellab/\}},
+title = {{DoppelLab - Exploring Dense Sensor Network Data Through A Game Engine}}
+}
 @misc{MIT,
 annote = {        From Duplicate 1 (                           Responsive Environments Group                         - MIT )
                 
@@ -2661,11 +2666,6 @@ author = {MIT},
 howpublished = {$\backslash$url\{http://www.media.mit.edu/resenv/\}},
 title = {{Responsive Environments Group}},
 url = {http://www.media.mit.edu/resenv/}
-}
-@misc{mit:doppel,
-author = {MIT},
-howpublished = {$\backslash$url\{http://www.media.mit.edu/resenv/doppellab/\}},
-title = {{DoppelLab - Exploring Dense Sensor Network Data Through A Game Engine}}
 }
 @article{Mittal2011,
 author = {Mittal, Manas and Paradiso, Joseph A},
@@ -2702,6 +2702,12 @@ pages = {295--296},
 title = {{Localization System for Large Indoor Environments Using Invisible markers}},
 year = {2008}
 }
+@inproceedings{Okura2011,
+author = {Okura, Fumio and Kanbara, Masayuki and Yokoya, Naokazu},
+booktitle = {International Conference on Computer Graphics and Interactive Techniques, SIGGRAPH 2011, Vancouver, BC, Canada, August 7-11, 2011 , Poster Proceedings},
+title = {{Fly-through Heijo Palace Site: Historical Tourism System Using Augmented Telepresence}},
+year = {2011}
+}
 @article{Okura2006,
 abstract = {Augmented Telepresence is a technique for viewing a remote site using immersive displays.},
 author = {Okura, Fumio and Kanbara, Masayuki and Yokoya, Naokazu},
@@ -2711,12 +2717,6 @@ pages = {4503--4503},
 title = {{Fly-through Heijo Palace Site : Augmented Telepresence Using Aerial Omnidirectional Videos}},
 volume = {1},
 year = {2006}
-}
-@inproceedings{Okura2011,
-author = {Okura, Fumio and Kanbara, Masayuki and Yokoya, Naokazu},
-booktitle = {International Conference on Computer Graphics and Interactive Techniques, SIGGRAPH 2011, Vancouver, BC, Canada, August 7-11, 2011 , Poster Proceedings},
-title = {{Fly-through Heijo Palace Site: Historical Tourism System Using Augmented Telepresence}},
-year = {2011}
 }
 @misc{Oliver2010,
 author = {Oliver, Iain A and Miller, Alan H D and Allison, Colin},
@@ -3099,11 +3099,11 @@ publisher = {Springer-Verlag},
 title = {{Cyberspace as Representation of Space Experience: In Defence of a Phenomenological Approach}},
 year = {2002}
 }
-@inproceedings{Regenbrecht2002,
+@article{Regenbrecht1992,
 author = {Regenbrecht, Holger and Schubert, Thomas},
-booktitle = {Proceedings of the 5th Annual International Workshop on Presence},
-title = {{Measuring presence in augmented reality environments: design and a first test of a questionnaire}},
-year = {2002}
+keywords = {augmented reality,sense of presence},
+title = {{Measuring Presence in Augmented Reality Environments : Design and a First Test of a Questionnaire}},
+year = {1992}
 }
 @misc{Regenbrecht2002a,
 abstract = {It has long been argued that the possibility to interact in and with a virtual environment (VE) enhances the sense of pres- ence. On the basis of a three-component model of presence, we specify this hypothesis and argue that the mental represen- tation of possible actions should especially enhance spatial presence, and to a lesser extent the involvement and realness of a VE. We support this hypothesis in three studies. A corre- lative study showed that self-reported interaction possibilities correlated significantly with spatial presence, but not with the other two factors. A first experimental study showed that pos- sible self-movement significantly increased spatial presence and realness. A second experimental study showed that even the illusion of interaction, with no actual interaction taking place, significantly increased spatial presence.},
@@ -3116,11 +3116,11 @@ title = {{Real and Illusory Interactions Enhance Presence in Virtual Environment
 volume = {11},
 year = {2002}
 }
-@article{Regenbrecht1992,
+@inproceedings{Regenbrecht2002,
 author = {Regenbrecht, Holger and Schubert, Thomas},
-keywords = {augmented reality,sense of presence},
-title = {{Measuring Presence in Augmented Reality Environments : Design and a First Test of a Questionnaire}},
-year = {1992}
+booktitle = {Proceedings of the 5th Annual International Workshop on Presence},
+title = {{Measuring presence in augmented reality environments: design and a first test of a questionnaire}},
+year = {2002}
 }
 @article{Reilly2010,
 abstract = {We introduce TwinSpace, a flexible software infrastructure for combining interactive workspaces and collaborative virtual worlds. Its design is grounded in the need to support deep connectivity and flexible mappings between virtual and real spaces to effectively support collaboration. This is achieved through a robust connectivity layer linking heterogeneous collections of physical and virtual devices and services, and a centralized service to manage and control mappings between physical and virtual. In this paper we motivate and present the architecture of TwinSpace, discuss our experiences and lessons learned in building a generic framework for collaborative cross-reality, and illustrate the architecture using two implemented examples that highlight its flexibility and range, and its support for rapid prototyping.},
@@ -3172,14 +3172,6 @@ title = {{Responsive Environments Group - Research Themes}},
 url = {http://resenv.media.mit.edu/motto.html},
 urldate = {18/05/2012}
 }
-@book{Rheingold1992,
-author = {Rheingold, Howard},
-isbn = {978-0671778972},
-pages = {416},
-publisher = {Simon \& Schuster},
-title = {{Virtual Reality: The Revolutionary Technology of Computer-Generated Artificial Worlds - and How It Promises to Transform Society}},
-year = {1992}
-}
 @book{Rheingold2000,
 address = {Cambridge, MA},
 author = {Rheingold, Howard},
@@ -3189,6 +3181,14 @@ pages = {447},
 publisher = {The MIT Press},
 title = {{The Virtual Community: Homesteading on the Electronic Frontier}},
 year = {2000}
+}
+@book{Rheingold1992,
+author = {Rheingold, Howard},
+isbn = {978-0671778972},
+pages = {416},
+publisher = {Simon \& Schuster},
+title = {{Virtual Reality: The Revolutionary Technology of Computer-Generated Artificial Worlds - and How It Promises to Transform Society}},
+year = {1992}
 }
 @inproceedings{Richardson2004,
 address = {New York, New York, USA},
@@ -3384,18 +3384,13 @@ title = {{SL1200}},
 url = {http://www.sarantel.com/products/sl1200},
 urldate = {11/02/2013}
 }
-@incollection{Schubert1999,
-abstract = {Schubert, T.W., Friedman, F., \& Regenbrecht, H.T. (1999). Embodied presence in virtual environments. In: Paton R, Neilson I (Eds.). Visual representations and interpretations. Springer-Verlag, London, pp. 268–278.},
-author = {Schubert, Thomas and Friedmann, Frank and Regenbrecht, Holger},
-booktitle = {Visual representations and interpretations},
-doi = {10.1007/978-1-4471-0563-3\_30},
-editor = {{Paton R}, Neilson I},
-isbn = {9781441909183},
-pages = {268--278},
-publisher = {Springer-Verlag},
-title = {{Embodied presence in virtual environments}},
-url = {http://link.springer.com/chapter/10.1007/978-1-4471-0563-3\_30},
-year = {1999}
+@misc{Schofield2012,
+author = {Schofield, Jack},
+booktitle = {The Guardian Technology Blog},
+title = {{Google Project Glass: will we really wear digital goggles?}},
+url = {http://www.theguardian.com/technology/2012/apr/05/google-project-glass-digital-goggles},
+urldate = {22/12/2014},
+year = {2012}
 }
 @misc{Schubert2001,
 abstract = {Within an embodied cognition framework, it is argued that presence in a virtual environment (VE) develops from the construction of a spatial-functional mental model of the VE. Two cognitive processes lead to this model: the representation of bodily actions as possible actions in the VE, and the suppression of incompatible sensory input. It is hypothesized that the conscious sense of presence reflects these two components as spatial presence and involvement. This prediction was con- firmed in two studies (N ? 246 and N ? 296) assessing self-reports of presence and immersion experiences. Additionally, judgments of “realness” were observed as a third presence component. A second-order factor analysis showed a distinction between presence, immersion, and interaction factors. Building on these results, a thirteen-item presence scale consisting of three independent components was de- veloped and verified using confirmatory factor analyses across the two studies. Presence is a construct, a variable with various levels and dimensions. Biocca and Delaney (1995, p. 62)},
@@ -3410,6 +3405,19 @@ pmid = {18368863},
 title = {{The Experience of Presence: Factor Analytic Insights}},
 volume = {10},
 year = {2001}
+}
+@incollection{Schubert1999,
+abstract = {Schubert, T.W., Friedman, F., \& Regenbrecht, H.T. (1999). Embodied presence in virtual environments. In: Paton R, Neilson I (Eds.). Visual representations and interpretations. Springer-Verlag, London, pp. 268–278.},
+author = {Schubert, Thomas and Friedmann, Frank and Regenbrecht, Holger},
+booktitle = {Visual representations and interpretations},
+doi = {10.1007/978-1-4471-0563-3\_30},
+editor = {{Paton R}, Neilson I},
+isbn = {9781441909183},
+pages = {268--278},
+publisher = {Springer-Verlag},
+title = {{Embodied presence in virtual environments}},
+url = {http://link.springer.com/chapter/10.1007/978-1-4471-0563-3\_30},
+year = {1999}
 }
 @misc{Schweinzer2010a,
 abstract = {This paper presents an indoor positioning system called LOSNUS (LOcalization of Sensor Nodes by Ultra-Sound). It offers high accuracy of \~{}10 mm, a locating rate up to \~{}10 cycles/s and is applicable for both tracking mobile and locating static devices. LOSNUS is mainly designed to localize static devices especially in a wireless sensor network (WSN) with numerously deployed sensor/actuator devices which enables substantially improving a lot of aspects of applications, e.g. network integration of nodes, supplying node locations to application programs, supervising locations with respect to accidentally dislocating, automatic setup and detecting faking of node locations. In order to deal with the demand of locating static devices, the system is optimized for cheap implementation and on the other hand for a high resolution of locations. Concept and basic operation, realization of system components and low-cost receiver principles, improved system performance and setup of a test system will be discussed in this paper.},
@@ -3465,6 +3473,16 @@ title = {{Welcome to the New Journal}},
 volume = {1},
 year = {1992}
 }
+@article{Sivan2011,
+abstract = {With this issue JVWR celebrates its fourth year. During these years, we have matured to be the prime source of research in our emerging domain. Earlier this month (Dec. 2011), we celebrated, for the first time, by hosting a JVWR workshop at the International Conference on Information Systems (ICIS 2011 Shanghai, China. This issue takes an historical perspective. In many ways, this issue is a direct decedent of Volume 2, Number 3 - Technology, Economy and Standards in Virtual Worlds. The latter has drawn a vision, this one reports on the outcomes. On this note of moving from vision to reality, I wanted to wish us all happy new 2012.},
+author = {Sivan, Yesha},
+journal = {Journal of Virtual Worlds Research},
+number = {3},
+title = {{Managing Editor’s Corner: Celebrating Four Years and Planning for the Next}},
+url = {https://journals.tdl.org/jvwr/article/view/6140},
+volume = {4},
+year = {2011}
+}
 @article{Sivan2009,
 annote = {        From Duplicate 1 (                           Overview: State of Virtual Worlds Standards in 2009                         - Sivan, Yesha )
                 
@@ -3479,16 +3497,6 @@ title = {{Overview: State of Virtual Worlds Standards in 2009}},
 url = {http://journals.tdl.org/jvwr/article/view/671/539},
 volume = {2},
 year = {2009}
-}
-@article{Sivan2011,
-abstract = {With this issue JVWR celebrates its fourth year. During these years, we have matured to be the prime source of research in our emerging domain. Earlier this month (Dec. 2011), we celebrated, for the first time, by hosting a JVWR workshop at the International Conference on Information Systems (ICIS 2011 Shanghai, China. This issue takes an historical perspective. In many ways, this issue is a direct decedent of Volume 2, Number 3 - Technology, Economy and Standards in Virtual Worlds. The latter has drawn a vision, this one reports on the outcomes. On this note of moving from vision to reality, I wanted to wish us all happy new 2012.},
-author = {Sivan, Yesha},
-journal = {Journal of Virtual Worlds Research},
-number = {3},
-title = {{Managing Editor’s Corner: Celebrating Four Years and Planning for the Next}},
-url = {https://journals.tdl.org/jvwr/article/view/6140},
-volume = {4},
-year = {2011}
 }
 @article{Sivan2008,
 annote = {Interesting bit about Vuzix iWear VR920 3D goggles which, through a special driver for Second Life, allowed you to view a virtual world simply by turning your head (but of course didn't work for any other virtual world \& in fact only a specific version of Second Life) - but shows that controlling the gaze of the avatar/camera from a real-time external data source is possible through modification of the VW server (eg a region module in OpenSim).},
@@ -3754,13 +3762,6 @@ url = {http://www.ncbi.nlm.nih.gov/pubmed/21467889},
 volume = {27},
 year = {2011}
 }
-@book{Terashima2001,
-editor = {Terashima, Nobuyoshi and Tiffin, John},
-isbn = {041526104X},
-publisher = {Routledge},
-title = {{HyperReality: Paradigm for the Third Millenium}},
-year = {2001}
-}
 @article{Thomas2009,
 abstract = {Looks at how through-walls collaboration lets users in the field work in real time with users indoors who have access to reference materials, a global picture, and advanced technology. The concept leverages ubiquitous workspaces, augmented reality, and wearable computers.},
 annote = {        From Duplicate 1 (                           Through-Walls Collaboration                         - Piekarski, Wayne; Thomas, Bruce H. )
@@ -3828,17 +3829,17 @@ publisher = {Springer-Verlag},
 title = {{Virtual Reality as Simulation: The CAVE as "Space of Illusion" in Museum Displays}},
 year = {2002}
 }
-@misc{U-bloxAG,
-author = {u-blox AG},
-title = {{MAX-6 series}},
-url = {http://www.u-blox.com/en/gps-modules/pvt-modules/max-6.html},
-urldate = {11/02/2013}
-}
 @misc{U-bloxAG2012,
 author = {u-blox AG},
 title = {{MAX-6 Product Summary}},
 url = {http://www.u-blox.com/images/downloads/Product\_Docs/MAX-6\_ProductSummary\_(GPS.G6-HW-10089).pdf},
 year = {2012}
+}
+@misc{U-bloxAG,
+author = {u-blox AG},
+title = {{MAX-6 series}},
+url = {http://www.u-blox.com/en/gps-modules/pvt-modules/max-6.html},
+urldate = {11/02/2013}
 }
 @misc{U-bloxAGa,
 author = {u-blox AG},
@@ -3930,6 +3931,7 @@ year = {2011}
 }
 @misc{Venables2013,
 annote = {Quote from Palmer Luckey
+
         
 'Luckey always shared his plans online to the few stalwarts of the then-small, virtual reality scene "since it kind of crashed in the 90s" he qualifies.'},
 author = {Venables, Michael},
@@ -4142,7 +4144,7 @@ address = {New York, New York, USA},
 author = {Wojciechowski, Rafal and Walczak, Krzysztof and White, Martin and Cellary, Wojciech},
 booktitle = {Proceedings of the ninth international conference on 3D Web technology - Web3D '04},
 doi = {10.1145/985040.985060},
-file = {:home/cj/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Wojciechowski et al. - 2004 - Building Virtual and Augmented Reality museum exhibitions(2).pdf:pdf},
+file = {:home/cj/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Wojciechowski et al. - 2004 - Building Virtual and Augmented Reality museum exhibitions.pdf:pdf},
 isbn = {1581138458},
 keywords = {VRML,augmented reality,cultural heritage,virtual reality},
 month = apr,
@@ -4249,4 +4251,11 @@ author = {Zhao, Shanyang},
 booktitle = {Proceedings of the fifth annual international workshop on Presence},
 title = {{Reconceptualizing Presence: Differentiating Between Mode of Presence and Sense of Presence}},
 year = {2002}
+}
+@book{Turkle2011,
+author = {Turkle, Sherry},
+pages = {384},
+publisher = {Basic Books},
+title = {{Alone Together: Why We Expect More From Technology And Less From Each Other}},
+year = {2011}
 }
